--- a/forest_growth.yml
+++ b/forest_growth.yml
@@ -8,7 +8,7 @@ dependencies:
   - backports=1.0=py_2
   - blas=1.0=mkl
   - bleach=3.1.0=py27_0
-  - ca-certificates=2019.8.28=0
+  - ca-certificates=2019.10.16=0
   - certifi=2019.9.11=py27_0
   - configparser=4.0.2=py27_0
   - cycler=0.10.0=py27hfc73c78_0
@@ -20,12 +20,15 @@ dependencies:
   - expat=2.2.6=h0a44026_0
   - freetype=2.5.5=2
   - functools32=3.2.3.2=py27_1
+  - futures=3.3.0=py27_0
   - gettext=0.19.8.1=h15daf44_3
   - glib=2.56.2=hd9629dc_0
   - icu=54.1=0
+  - imageio=2.6.1=py27_0
   - intel-openmp=2019.4=233
   - ipython_genutils=0.2.0=py27h8b9a179_0
   - ipywidgets=7.5.1=py_0
+  - jbig=2.1=h4d881f8_0
   - jedi=0.15.1=py27_0
   - jinja2=2.10.3=py_0
   - jpeg=8d=2
@@ -42,6 +45,7 @@ dependencies:
   - libiconv=1.15=hdd342a3_7
   - libpng=1.6.37=ha441bb4_0
   - libsodium=1.0.16=h3efe00b_0
+  - libtiff=4.0.6=2
   - markupsafe=1.1.1=py27h1de35cc_0
   - matplotlib=2.0.2=np113py27_0
   - mistune=0.8.4=py27h1de35cc_0
@@ -49,7 +53,7 @@ dependencies:
   - nbconvert=5.5.0=py_0
   - nbformat=4.4.0=py27hddc86d0_0
   - ncurses=6.1=h0a44026_1
-  - openssl=1.1.1d=h1de35cc_2
+  - openssl=1.1.1d=h1de35cc_3
   - pandoc=2.2.3.2=0
   - pandocfilters=1.4.2=py27_1
   - parso=0.5.1=py_0
@@ -58,6 +62,7 @@ dependencies:
   - pexpect=4.7.0=py27_0
   - pickleshare=0.7.5=py27_0
   - pil=1.1.7=py27_2
+  - pillow=3.4.2=py27_0
   - pip=19.2.3=py27_0
   - prometheus_client=0.7.1=py_0
   - ptyprocess=0.6.0=py27_0
@@ -102,7 +107,6 @@ dependencies:
     - ee==0.4
     - funcsigs==1.0.2
     - future==0.18.0
-    - futures==3.3.0
     - gast==0.2.2
     - google-api-core==1.14.3
     - google-api-python-client==1.7.11
